--- a/FinalProjectPython.ipynb
+++ b/FinalProjectPython.ipynb
@@ -17,6 +17,88 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#Exploratory Data Analysis and Machine Learning on NYC Restaurants Data.\n",
+        "\n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "q3s3zrN0N4e3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Team Members**\n",
+        "\n",
+        "*   Shubham Harishchandra Madhavi\n",
+        "*   Yuga Kapil Krishna Maytharametla\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "K3cI3KV7ROes"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Dataset Link**\n",
+        "\n",
+        "https://www.kaggle.com/datasets/ahsan81/food-ordering-and-delivery-app-dataset\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "as1gsUdlR2ck"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Git Hub Link**\n",
+        "\n",
+        "https://github.com/kapilkrishnam/PythonProgramming\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SF5Wt8L8Rr23"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Abstract**\n",
+        "\n",
+        "This Project analyzes and performs machine learning technique’s the \"NYC Restaurants data for food ordering and delivery\" dataset available on Kaggle. The data was collected by an online food delivery app and includes information about restaurants, customers, and orders. This report explores the data's content, preprocessing steps, potential use cases, and methodological approaches for analysis.\n",
+        "\n",
+        "**Introduction**\n",
+        "\n",
+        " Food ordering and delivery apps have revolutionized the restaurant industry, enabling convenient access to diverse culinary options. Analyzing data from these apps can provide valuable insights into food trends, customer preferences, and restaurant performance. This report examines the \"NYC Restaurants data for food ordering and delivery\" dataset, offering a foundation for further exploration and analysis."
+      ],
+      "metadata": {
+        "id": "eMNuz5YwL2F9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dataset\n",
+        "The dataset includes data from an online food delivery app operating in New York City. It encompasses information about:\n",
+        "* Restaurants: Restaurant names, cuisines, locations, ratings, and delivery times.\n",
+        "* Customers: Customer demographics, order histories, and preferences.\n",
+        "* Orders: Order details, including items, prices, timestamps, and delivery information.\n",
+        "\n",
+        "The data's size, granularity, and diverse scope make it valuable for various food-related analyses.\n"
+      ],
+      "metadata": {
+        "id": "OtYtNxKSMf-P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Importing Libraries:**"
       ],
       "metadata": {
@@ -807,6 +889,35 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Preprocessing\n",
+        "Before analysis, the data may require preprocessing steps to ensure accuracy and consistency. These steps include:\n",
+        "* Handling missing values: Imputing missing data or removing entries with excessive missingness.\n",
+        "* Data cleaning: Identifying and correcting inconsistencies or errors in the data.\n",
+        "* Feature engineering: Creating new features based on existing data to facilitate analysis.\n",
+        "\n",
+        "Literature Review\n",
+        "Existing research on food delivery app data can inform the analysis of this dataset. Relevant studies might explore:\n",
+        "* Demand prediction: Forecasting restaurant demand based on historical data and external factors.\n",
+        "* Customer segmentation: Identifying distinct customer groups based on their ordering patterns and preferences.\n",
+        "* Restaurant recommendation: Recommending restaurants to customers based on their past behavior and location.\n",
+        "\n",
+        "Understanding these existing research areas can guide the analysis of this dataset and contribute to novel findings.\n",
+        "\n",
+        "Architecture/Methodology\n",
+        "The chosen analysis methodology will depend on the specific research questions or goals. Potential approaches include:\n",
+        "* Descriptive statistics: Summarizing the data's characteristics, such as average order value or restaurant popularity.\n",
+        "* Regression analysis: Identifying relationships between variables, such as order frequency and customer demographics.\n",
+        "* Clustering: Grouping restaurants or customers based on shared characteristics.\n",
+        "\n",
+        "Selecting the appropriate methodology will ensure the analysis effectively addresses the research objectives."
+      ],
+      "metadata": {
+        "id": "4SQW1MmFNbOS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Preparing the data for machine learning"
       ],
       "metadata": {
@@ -1099,6 +1210,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Results:\n",
+        "* Linear Regression: emerged as the most accurate model for prediction tasks, achieving a Root Mean Squared Error (RMSE) of 0.50. This indicates that Linear Regression minimizes the average difference between predicted and actual values by a significant margin.\n",
+        "* Random Forest: demonstrated comparable performance with an RMSE of 0.56. While slightly less accurate than Linear Regression, Random Forest offers the advantage of being more robust to outliers and less prone to overfitting.\n",
+        "* Logistic Regression and Decision Trees: faced challenges in classification tasks, with accuracy falling below 55%. These models might not be well-suited for the specific classification problem at hand, or additional tuning and feature engineering could be necessary to improve their performance."
+      ],
+      "metadata": {
+        "id": "hydMjUtQM8Cw"
+      }
     },
     {
       "cell_type": "markdown",
